# guacamol

./: .gitignore  pyproject.toml
guacamol/: assess_distribution_learning.py  assess_goal_directed_generation.py  benchmark_suites.py  common_scoring_functions.py  distribution_learning_benchmark.py  distribution_matching_generator.py  frechet_benchmark.py  goal_directed_benchmark.py  goal_directed_generator.py  goal_directed_score_contributions.py  score_modifier.py  scoring_function.py  standard_benchmarks.py
guacamol/data/: get_data.py
guacamol/utils/: chemistry.py  data.py  fingerprints.py  helpers.py  math.py  parallelize.py  sampling_helpers.py
tests/: mock_generator.py  test_distribution_learning_benchmarks.py  test_goal_directed_benchmark.py  test_sampling_helpers.py  test_score_modifier.py  test_scoring_functions.py
tests/utils/: test_chemistry.py  test_data.py  test_descriptors.py
