[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guacamol"
dynamic = ["version"]
description = "Guacamol: benchmarks for de novo molecular design"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "BenevolentAI", email = "guacamol@benevolent.ai" }]
requires-python = ">=3.9"
dependencies = [
    "joblib>=0.12.5",
    "numpy>=1.15.2",
    "scipy>=1.1.0",
    "tqdm>=4.26.0",
    "fcd>=1.1",
    "rdkit>=2021.9.2.1, <2022.9.5",
]

[project.urls]
Homepage = "https://github.com/BenevolentAI/guacamol"

[tool.setuptools.packages.find]
include = ["guacamol*"]

[tool.setuptools.dynamic]
version = { attr = "guacamol.__version__" }

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
